@@ -102,9 +102,7 @@ public class JVM implements Caching {
             final Method allocateInstance = unsafeClass.getDeclaredMethod("allocateInstance", new Class[]{Class.class});
             allocateInstance.setAccessible(true);
             test = allocateInstance.invoke(unsafe, new Object[]{Test.class}) != null;
-        } catch (final Exception e) {
-            test = false;
-        } catch (final Error e) {
+        } catch (final Exception | Error e) {
             test = false;
         }
         canAllocateWithUnsafe = test;
@@ -119,18 +117,16 @@ public class JVM implements Caching {
                     final Test t = (Test)provider.newInstance(Test.class);
                     try {
                         provider.writeField(t, "o", "object", Test.class);
-                        provider.writeField(t, "c", new Character('c'), Test.class);
-                        provider.writeField(t, "b", new Byte((byte)1), Test.class);
-                        provider.writeField(t, "s", new Short((short)1), Test.class);
-                        provider.writeField(t, "i", new Integer(1), Test.class);
-                        provider.writeField(t, "l", new Long(1), Test.class);
-                        provider.writeField(t, "f", new Float(1), Test.class);
-                        provider.writeField(t, "d", new Double(1), Test.class);
+                        provider.writeField(t, "c", Character.valueOf('c'), Test.class);
+                        provider.writeField(t, "b", Byte.valueOf((byte)1), Test.class);
+                        provider.writeField(t, "s", Short.valueOf((short)1), Test.class);
+                        provider.writeField(t, "i", Integer.valueOf(1), Test.class);
+                        provider.writeField(t, "l", Long.valueOf(1), Test.class);
+                        provider.writeField(t, "f", Float.valueOf(1), Test.class);
+                        provider.writeField(t, "d", Double.valueOf(1), Test.class);
                         provider.writeField(t, "bool", Boolean.TRUE, Test.class);
                         test = true;
-                    } catch (final IncompatibleClassChangeError e) {
-                        cls = null;
-                    } catch (final ObjectAccessException e) {
+                    } catch (final IncompatibleClassChangeError | ObjectAccessException e) {
                         cls = null;
                     }
                     if (cls == null) {
@@ -179,9 +175,7 @@ public class JVM implements Caching {
         try {
             new SimpleDateFormat("X").parse("Z");
             test = true;
-        } catch (final ParseException e) {
-            test = false;
-        } catch (final IllegalArgumentException e) {
+        } catch (final ParseException | IllegalArgumentException e) {
             test = false;
         }
         canParseISO8601TimeZoneInDateFormat = test;
@@ -189,9 +183,7 @@ public class JVM implements Caching {
             @SuppressWarnings("resource")
             final CustomObjectOutputStream stream = new CustomObjectOutputStream(null, null);
             test = stream != null;
-        } catch (final RuntimeException e) {
-            test = false;
-        } catch (final IOException e) {
+        } catch (final RuntimeException | IOException e) {
             test = false;
         }
         canCreateDerivedObjectOutputStream = test;
@@ -344,9 +336,7 @@ public class JVM implements Caching {
             final Class<? extends T> clazz = (Class<? extends T>)Class
                 .forName(name, initialize, JVM.class.getClassLoader());
             return clazz;
-        } catch (final LinkageError e) {
-            return null;
-        } catch (final ClassNotFoundException e) {
+        } catch (final LinkageError | ClassNotFoundException e) {
             return null;
         }
     }
